fix: make password thing wrap
When a long string is slapped in there, we want to wrap instead of
letting it go all the way off the page.

--- a/src/LargePasswordDisplay/LargePasswordDisplay.module.scss
+++ b/src/LargePasswordDisplay/LargePasswordDisplay.module.scss
@@ -1,5 +1,5 @@
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: normal;
+  flex-wrap: wrap;
 }
